project('coroutine_experiment', 'cpp', default_options :
  ['warning_level=3', 'cpp_std=c++2a']
)

executable('simple_passed_handler', ['simple_passed_handler.cpp'])
executable('pass_value_to_coroutine', ['pass_value_to_coroutine.cpp'])
executable('co_yield_return', ['co_yield_return.cpp'])
executable('generator_experiment', ['generator_experiment.cpp'])